--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="navbar">
     <div class="container">
       <a class="navbar-brand" href="#home">
-          <img src="Screenshot (1093).png"
-            width="100" height="40" alt="logo">
+          <img src="Images/Screenshot (1093).png"
+            width="100" height="40" alt="Brand">
       </a>
       <button class="navbar-toggler navbar-toggler-right custom-toggler" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -264,8 +264,8 @@
                 </div>
               </div>
             </div>
-            <img class="img-fluid" src="Screenshot (1117).png"
-              alt="Screenshot">
+            <img class="img-fluid" src="Images/Screenshot (1117).png"
+              alt="ConnectFour Game">
           </a>
         </div>
         <!-- 2 -->
@@ -280,8 +280,8 @@
                 </div>
               </div>
             </div>
-            <img class="img-fluid" src="Screenshot (1119).png"
-              alt="Screenshot">
+            <img class="img-fluid" src="Images/Screenshot (1119).png"
+              alt="TIC-TAC-TOE">
           </a>
         </div>
         <!-- 3 -->
@@ -296,8 +296,8 @@
                 </div>
               </div>
             </div>
-            <img class="img-fluid" src="Screenshot (1120).png"
-              alt="Screenshot">
+            <img class="img-fluid" src="Images/Screenshot (1120).png"
+              alt="Railway Reservation">
           </a>
         </div>
       </div>
