--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="navbar">
     <div class="container">
-      <a class="navbar-brand" href="#home">
+      <a class="navbar-brand" href="https://Vikash-techie.github.io" target="_self">
           <img src="Images/Screenshot (1093).png"
             width="100" height="40" alt="Brand">
       </a>
@@ -93,11 +93,11 @@
         <div class="col-md-6">
           <div class="about about-text">
             <p>
-              I'am currently an Undergraduate Student at Vellore Institute of Technology.As you have
-              already read in the above section that I do like Competitive Programming and I go by the user-name
-              Vikash_Techie and The_Techie in Websites like AtCoder, Codeforces, CodeChef and HackerRank.
+              I am currently an Undergraduate Student at Vellore Institute of Technology. As you have
+              already read in the section above that I like Competitive Programming and I go by the user-name
+              Vikash_Techie and The_Techie in the Websites like AtCoder, Codeforces, CodeChef and HackerRank.
               <br>Besides this I like developing Websites with Django in the Back-end.
-              <br>Something off-topic I'am a big fan of Usain Bolt.Anyways I will write about him in some other blog.
+              <br>Something off-topic I am a big fan of Usain Bolt. Anyways I will write about him in some other blog.
             </p>
           </div>
         </div>
@@ -127,7 +127,7 @@
               <div class="timeline-body">
                 <p>Computer Science Engineering</p>
                 <ul class="text-muted">
-                  <li>Build a Project on Railway Reservation System</li>
+                  <li>Built a Project on Railway Reservation System</li>
                   <li>Interactive Location web by GeoDjango and Google Map API's</li>
                   <li>Currently working on Online Recharge Website</li>
                 </ul>
@@ -172,7 +172,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading">Skills</h2>
-          <h3 class="section-sub-heading">Some Skills which I learnt and improving daily.</h3>
+          <h3 class="section-sub-heading">Skills I have learnt and improving daily.</h3>
         </div>
       </div>
       <!-- 1st Row -->
@@ -311,7 +311,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading">Contact</h2>
-          <h3 class="section-sub-heading text-muted">You can contact me through the given EMAIL ID or in this Websites.</h3>
+          <h3 class="section-sub-heading text-muted">You can contact me through the given EMAIL ID or in these Websites.</h3>
         </div>
       </div>
       <div class="row">
@@ -326,31 +326,31 @@
               <div id="contact-information" class="col-md-4">
                 <ul class="list-inline social-buttons">
                   <li class="list-inline-item">
-                    <a href="https://www.linkedin.com/in/vikash-sunil-91174518b/" target="_blank" class="linkedin-button">
+                    <a href="https://www.linkedin.com/in/vikash-sunil-91174518b/" target="_self" class="linkedin-button">
                       <i class="fab fa-linkedin fa-2x"></i>
                     </a>
                   </li>
                   <br><br>
                   <li class="list-inline-item">
-                    <a href="https://github.com/Vikash-techie" target="_blank" class="github-button">
+                    <a href="https://github.com/Vikash-techie" target="_self" class="github-button">
                       <i class="fab fa-github fa-2x"></i>
                     </a>
                   </li>
                   <br><br>
                   <li class="list-inline-item">
-                    <a id="profile-link" href="https://www.hackerrank.com/VikashTechie01" target="_blank" class="freecodecamp-button">
+                    <a id="profile-link" href="https://www.hackerrank.com/VikashTechie01" target="_self" class="freecodecamp-button">
                       <i class="fab fa-hackerrank fa-2x"></i>
                     </a>
                   </li>
                   <br><br>
                   <li class="list-inline-item">
-                    <a id="profile-link" href="http://instagram.com/vikash_techie_01" target="_blank" class="freecodecamp-button">
+                    <a id="profile-link" href="http://instagram.com/vikash_techie_01" target="_self" class="freecodecamp-button">
                       <i class="fab fa-instagram-square fa-2x"></i>
                     </a>
                   </li>
                   <br><br>
                   <li class="list-inline-item">
-                    <a id="profile-link" href="http://instagram.com/vikash_techie_01" target="_blank" class="freecodecamp-button">
+                    <a id="profile-link" href="https://www.facebook.com/vikas.sunil.1/" target="_self" class="freecodecamp-button">
                       <i class="fab fa-facebook-square fa-2x"></i>
                     </a>
                   </li>
@@ -367,6 +367,8 @@
   <footer>
     <div class="container">
       <div class="row">
+        <div class="col-md-5">
+        </div>
         <div class="col-md-2">
           <span class="copyright"> &copy; 2020
             <a href="https://www.hackerrank.com/VikashTechie01">Vikash Sunil</a>
