--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="row">
         <div class="col-md-6 text-center">
           <div class="about about-picture">
-              <img class="mx-auto rounded-circle" src="https://media-exp1.licdn.com/dms/image/C4D03AQF-ozTgtXLiaw/profile-displayphoto-shrink_400_400/0?e=1609977600&v=beta&t=oOfUuxmrwMnbhVSUoi3ApYGsasdSHb_J0HX95CUtB_U"
+              <img class="mx-auto rounded-circle" src="https://avatars.githubusercontent.com/u/54302385?s=400&u=45d8f01c67b869ed5418f79cc88f92aaf4a1a32c&v=4"
                 alt="Vikash Sunil">
           </div>
         </div>
