--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>Personal Portfolio</title>
   <meta charset="UTF-8">
+  <meta name="keywords" content="vikash, sunil, vikash sunil, Vikash Sunil, VIT, vit, web, developer, programmer">
+  <meta name="description" content="Undergraduate at VIT Chennai, vit, chennai, rajkot, competitive programmer, VikashTechie01">
+  <meta name="author" content="vikash sunil">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- 1st Sans-serif font -->
   <link href="https://fonts.googleapis.com/css?family=Signika:700" rel="stylesheet">
